# raceblindredact-cli

./: .gitignore  README.md  pyproject.toml  redact.spec
.github/workflows/: build_executables_on_release.yaml  build_linux_executable_on_release.yaml  build_windows_executable_on_release.yaml
src/redact_cli/: _version.py  redact.py
